--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <section class="fv">
             <div class="fv-img-container">
                 <img class="fv-img fv-img01"
-                    src="C:\Users\共有\Desktop\example\SHOMATSUDA_portfolio\site_html\img\fv02.jpg" alt="美瑛の雪景色">
+                    src="./img/fv02.jpg" alt="美瑛の雪景色">
             </div>
             <div class="mein-copy">
                 <h1>SHO <br class="br-sp">MATSUDA</h1>
