--- a/contact/index.html
+++ b/contact/index.html
@@ -14,16 +14,19 @@
         <div class="header-wrapper">
 
             <div class="header-left">
-                <a class="header-logo" href="../index.html">SHO MATSUDA</a>
+                <a class="header-logo" href="#">SHO MATSUDA</a>
             </div>
             <nav class="header-right">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="underdot" href="../about/index.html">About</a></li>
+                    <li class="nav-item"><a class="underdot" href="./about/index.html">About</a></li>
                     <li class="nav-item"><a class="underdot" href="">Works</a></li>
                     <li class="nav-item"><a class="underdot" href="">Blog</a></li>
-                    <li class="nav-item"><a class="underdot" href="index.html">Contact</a></li>
+                    <li class="nav-item"><a class="underdot" href="./contact/index.html">Contact</a></li>
                 </ul>
             </nav>
+            <div class="hbg-icon">
+                <span class="hbg-bar"></span>
+            </div>
         </div>
     </header>
 
