--- a/contact/index.html
+++ b/contact/index.html
@@ -21,7 +21,7 @@
                     <li class="nav-item"><a class="underdot" href="./about/index.html">About</a></li>
                     <li class="nav-item"><a class="underdot" href="">Works</a></li>
                     <li class="nav-item"><a class="underdot" href="">Blog</a></li>
-                    <li class="nav-item"><a class="underdot" href="./contact/index.html">Contact</a></li>
+                    <li class="nav-item"><a class="underdot" href="index.html">Contact</a></li>
                 </ul>
             </nav>
             <div class="hbg-icon">
