--- a/about/index.html
+++ b/about/index.html
@@ -15,7 +15,7 @@
         <div class="header-wrapper">
 
             <div class="header-left">
-                <a class="header-logo" href="#">SHO MATSUDA</a>
+                <a class="header-logo" href="../index.html">SHO MATSUDA</a>
             </div>
             <nav class="header-right">
                 <ul class="nav-list">
