--- a/contact/index.html
+++ b/contact/index.html
@@ -12,23 +12,23 @@
 <body>
     <header>
         <div class="header-wrapper">
-
             <div class="header-left">
                 <a class="header-logo" href="../index.html">SHO MATSUDA</a>
             </div>
-            <nav class="header-right">
+            <nav class="header-right" id="header-right">
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="underdot" href="./about/index.html">About</a></li>
+                    <li class="nav-item"><a class="underdot" href="../about/index.html">About</a></li>
                     <li class="nav-item"><a class="underdot" href="">Works</a></li>
                     <li class="nav-item"><a class="underdot" href="">Blog</a></li>
-                    <li class="nav-item"><a class="underdot" href="index.html">Contact</a></li>
+                    <li class="nav-item"><a class="underdot" href="./index.html">Contact</a></li>
                 </ul>
             </nav>
-            <div class="hbg-icon">
-                <span class="hbg-bar"></span>
+            <div class="hbg-icon" id="hbg-icon">
+                <span class="hbg-bar" id="hbg-bar"></span>
             </div>
         </div>
     </header>
+
 
     <main>
         <div class="contact-wrapper">
@@ -62,6 +62,8 @@
     <footer>
         <p>(c) 2021 SHOMATSUDA</p>
     </footer>
+    <script src="../script.js"></script>
+
 </body>
 
 </html>
