--- a/about/index.html
+++ b/about/index.html
@@ -13,20 +13,18 @@
 <body>
     <header>
         <div class="header-wrapper">
-
             <div class="header-left">
                 <a class="header-logo" href="../index.html">SHO MATSUDA</a>
             </div>
-            <nav class="header-right">
+            <nav class="header-right" id="header-right">
                 <ul class="nav-list">
                     <li class="nav-item"><a class="underdot" href="index.html">About</a></li>
                     <li class="nav-item"><a class="underdot" href="">Works</a></li>
                     <li class="nav-item"><a class="underdot" href="">Blog</a></li>
-                    <li class="nav-item"><a class="underdot" href="./contact/index.html">Contact</a></li>
-                </ul>
+                    <li class="nav-item"><a class="underdot" href="../contact/index.html">Contact</a></li> </ul>
             </nav>
-            <div class="hbg-icon">
-                <span class="hbg-bar"></span>
+            <div class="hbg-icon" id="hbg-icon">
+                <span class="hbg-bar" id="hbg-bar"></span>
             </div>
         </div>
     </header>
@@ -54,16 +52,16 @@
                     <div class="profile-items">
                         <img class="profile-img" src="../img/profile.jpg" alt="profile">
                         <div class="profile-text">
-                            <p>webデザイナー　SHO MATSUDA（松田 正太郎）
+                            <p>Front-end engineer　SHO MATSUDA（松田 正太郎）
                                 <br>1991年生まれ。東京都昭島市在住。
                                 <br>出身は北海道札幌市。
                                 <br>
                                 <br>工学院・修士課程修了後、大手自動車メーカにてエンジニア。
                                 <br>その後、大手人材会社のヘッドハント部門で、ヘッドハンターとして活動。
-                                <br>2021年より、フリーランスのwebデザイナーへ。
+                                <br>2021年より、webエンジニアに転身すべく独学中。
                                 <br>
                                 <br>ヘッドハンター時代に培った、「クライアントと実直に向き合う姿勢」を大切に、
-                                <br>ブランドの世界観を適切に伝えるためにweb制作をさせていただいております。
+                                <br>ブランドの世界観を適切に伝えるためにお仕事をさせていただいております。
                                 <br>
                             </p>
                         </div>
@@ -97,6 +95,7 @@
     <footer>
         <p>(c) 2021 SHOMATSUDA</p>
     </footer>
+    <script src="../script.js"></script>
 </body>
 
 </html>
